Add group entity to controllers and views. Step 3 (interface of navigation)

--- a/mvc4gw9/Content/Site.css
+++ b/mvc4gw9/Content/Site.css
@@ -534,6 +534,37 @@ font-weight:bold;
 text-decoration:none;
 }
 
+.navigation
+{
+    margin: 0;
+    float:left;
+}
+
+.navigation a
+{
+    font-size:1em;
+    font-weight:bold;
+    text-decoration:none;
+}
+
+.navigation ul
+{
+    margin: 0.5em 0em 0.5em 1em;
+    padding:0;
+    list-style-type:none;
+}
+
+.navigation ul ul
+{
+    margin: 0.2em 0em 0.7em 1em;
+}
+
+.products_list
+{
+    float:left;
+}
+
+
 .products_list a
 {
 text-decoration:none;
