--- a/mvc4gw9/Content/Site.css
+++ b/mvc4gw9/Content/Site.css
@@ -13,23 +13,6 @@ body {
     padding: 0;
 }
 
-a {
-    color: #333;
-    outline: none;
-    padding-left: 3px;
-    padding-right: 3px;
-    text-decoration: underline;
-}
-
-    a:link, a:visited,
-    a:active, a:hover {
-        color: #333;
-    }
-
-    a:hover {
-        background-color: #c7d1d6;
-    }
-
 mark {
     background-color: #a6dbed;
     padding-left: 5px;
@@ -502,6 +485,10 @@ tr.pager td {
 CUSTOM CSS
 */
 
+a:link, a:visited, a:active, a:hover {
+        text-decoration: none;
+    }
+
 .title
 {
 margin: 0 0 0 1em;
@@ -529,21 +516,23 @@ margin: 0.5em 0em 0.5em 1em;
 
 .path a
 {
-font-size:1em;
-font-weight:bold;
-text-decoration:none;
+font-size: 1em;
+font-weight: bold;
+color: Black;
+text-decoration: none;
 }
 
 .navigation
 {
     margin: 0;
-    float:left;
+    float: left;
 }
 
 .navigation a
 {
     font-size:1em;
     font-weight:bold;
+    color: Black;
     text-decoration:none;
 }
 
@@ -572,31 +561,43 @@ text-decoration:none;
 
 .products_list_item
 {
-margin: 1em ;
+width: 160px;
+height: 200px;
+margin: 1em;
 padding: 0;
 float:left;
 background-color:#736E6E;
 }
 
+
 .products_list_item_image
 {
-margin: 0.5em;
+margin: 10px 9px 15px 9px;
 padding: 0;
 width: 142px;
 height: 122px;
 }
 
-.products_list_item_title
+.products_list_item_title_area
 {
-margin: 0 0 0 0.5em;
-color:White;
+padding: 0;
+margin: 0 0.5em 0 0.5em;
+}
+
+
+.products_list_item_title_area a
+{
+margin: 0;
+padding: 0;
+font-size: 1em;
+color: White;
 }
 
 #product
 {
-float:left;
+float: left;
 margin: 1em;
-background-color:#736E6E;
+background-color: #736E6E;
 }
 
 .bigImage
@@ -617,6 +618,11 @@ margin:0;
 padding:0;
 }
 
+.product_description
+{
+width: 250px;
+}
+
 .product_description h4
 {
 font-weight:normal;
@@ -625,6 +631,7 @@ font-weight:normal;
 .product_characteristics
 {
 margin: 1em 0 0 0;
+width: 180px;
 }
 
 .product_characteristic
@@ -634,19 +641,14 @@ margin: 0.5em 0 0 0;
 
 .product_characteristic a
 {
-    text-decoration:none;    
+    margin: 0em 1em 0em 0em;
+    color: Black;
+    text-decoration: none;    
 }
 
 .footer
 {
 clear:both;
-}
-
-
-a.selected_value
-{
-background-color:#736E6E;
-color:White;
 }
 
 
