--- a/mvc4gw9/Views/Shared/_Layout.cshtml
+++ b/mvc4gw9/Views/Shared/_Layout.cshtml
@@ -11,15 +11,27 @@
         <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.min.js")" type="text/javascript"></script>
 
     </head>
+    
     <body>
-                        <ul id="menu">
-                            <li>@Html.ActionLink("Каталог продукции", "Index", "Home")</li>
-                        </ul>
+
+        <div id="title">
+            MINI INTERNET STORE
+        </div>
+
+        <div id="menu">
+            <ul>
+                <li>@Html.ActionLink("Каталог продукции", "Index", "Home")</li>
+            </ul>
+        </div>
 
         <div id="body">
-
                 @RenderBody()
+        </div>
 
+        <div id="footer">
+            firsttimedeveloper@mail.ru
         </div>
     </body>
+
+
 </html>
