--- a/mvc4gw9/Views/Home/product_changeParameter.cshtml
+++ b/mvc4gw9/Views/Home/product_changeParameter.cshtml
@@ -46,9 +46,14 @@
                     }
                 }    
                 </div>           
-            }
+            }            
          }
 
        </div>
+
+       <div class="shopping_basket_add">
+            <a href="/ShoppingBasket/Add?nomenclatureId=@Model.Id&amp;currentParameters=@Model.currentParameters">Добавить в корзину</a>
+       </div>
+
 
     </div>
